@@ -1,8 +1,11 @@
-// $Id: CHANGELOG.txt,v 1.116 2010/07/10 22:26:27 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.117 2010/07/10 23:45:36 alexb Exp $
 
 Feeds 6.x 1.X XXXX
 ------------------
 
+- #850298 alex_b: ParserCSV: Support batching (only affects library, full parser
+  level batch support to be added later with #744660).
+- Minor cleanup of admin UI language and CSS.
 - #647222 cglusky, jeffschuler: Specify input format for feed items.
 
 Feeds 6.x 1.0 Beta 2, 2010-07-10
